# Anonymous-Postboard

./: .gitattributes  .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: api_test.yml  page_build_test.yml
.postman/: api
anonymous-post-board/: .babelrc  next.config.js  package-lock.json  package.json
anonymous-post-board/src/api/: api.config.js  errorHandlers.js  posts.js  replies.js
anonymous-post-board/src/components/: Banner.js  FirstVisitModal.js  MorePostsModal.js  NewPostModal.js  NewReplyModal.js  Post.js  PostList.js  Reply.js  ReplyList.js  Vote.js
anonymous-post-board/src/pages/: _app.js  index.js  new_post.js
anonymous-post-board/src/pages/api/: get_posts.js
anonymous-post-board/src/styles/: Home.module.css  Vote.module.css  globals.css
api/: README.md  openapi.yml  package-lock.json  package.json
api/collections/: Base API.json
api/lambda/CS351-Project-Posts/: index.mjs
api/lambda/CS351-Project-Replies/: index.mjs
api/schemas/: openapi.yml
api/test/: post_test.js  replies_test.js
frontend/anonymous-post-board/src/components/: Banner.js  Post.js  ReplyList.js
frontend/anonymous-post-board/src/pages/: index.js
frontend/anonymous-post-board/src/styles/: Home.module.css
lambda/CS351-Project-Posts/: index.mjs
lambda/CS351-Project-Replies/: index.mjs
lambda/posts/: index.js
load-testing/: loadpages.ipynb  pyproject.toml
postman/collections/: Base API.json
postman/schemas/: openapi.yml
